<resources>
    <string name="app_name">Bondo Man</string>
    <string name="title_chart">Chart</string>
    <string name="title_scan">Scan</string>
    <string name="title_settings">Settings</string>
    <string name="title_login">Login</string>
    <string name="take_photo">Take Photo</string>
    <string name="gallery_photo">Choose from Gallery</string>

    <!-- Transaction -->
    <string name="title_transaction">Transaction</string>
    <string name="addTransactionBtn">Add Transaction</string>

    <!-- Add Transaction -->
    <string name="title_transaction_form">Add Transaction</string>
    <string name="transaction_form_back_button">Back on Add Transaction</string>
    <string name="save_transaction_button">Save</string>
    <string name="transaction_form_title_label">Title</string>
    <string name="transaction_form_amount_label">Amount ($)</string>
    <string name="transaction_form_category_label">Category</string>
    <string name="transaction_form_location_label">Location</string>
    <string name="transaction_form_enable_location_btn">Enable Location</string>
    <string name="transaction_form_default_location_text">Retrieving Location…</string>
    <string name="transaction_form_location_button">Transaction Location Button</string>
    <string name="transaction_form_date_label">Date</string>
    <string name="delete_transaction_button">Delete</string>
    <string name="transaction_form_open_in_gmaps_button">Open in Google Maps button</string>
    <string name="transaction_form_open_in_gmaps_text">Open in Google Maps</string>
    <string name="no_transaction">There is no transaction</string>
    <string name="send_transactions_option">Send transactions</string>
    <string name="randomize_transaction_option">Randomize transactions</string>
    <string name="logout_btn_text">Logout</string>
    <string name="date_label">Date</string>
    <string name="category_label">Category</string>
    <string name="amount_label">Amount</string>
    <string name="location_label">Location</string>
    <string name="login_subtitle_text">Please login to your account to start using BondoMan</string>
    <string name="email_label">Email</string>
    <string name="email_placeholder">Enter your email</string>
    <string name="email_error_text">Email is required</string>
    <string name="password_label">Password</string>
    <string name="password_placeholder">Enter your password</string>
    <string name="password_error_text">Password is required</string>
    <string name="login_btn_text">LOGIN</string>
    <string name="welcome_back_title">Welcome Back</string>
    <string name="export_as_excel_xslx_text">Export as Excel (.xslx)</string>
    <string name="export_as_excel_xls_text">Export as Excel (.xls)</string>
    <string name="retake_image">RETAKE</string>
    <string name="save_image">SAVE</string>
    <string name="title_scanned_bill">Scanned Bill</string>
    <string name="switch_camera">switch camera</string>
    <string name="display_image">display image</string>
    <string name="title">Title</string>
    <string name="quantity_label">Quantity</string>
    <string name="transaction_title_text">Title</string>
    <string name="account_icon_content_desc">Account Icon</string>
    <string name="account_placeholder">EMAIL</string>
    <string name="graph">Graph</string>
    <string name="transaction_header_title">Transaction Header Title</string>
    <string name="settings_header_title">Settings Header Title</string>
    <string name="title_twibbon">Twibbon</string>
</resources>