<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_transaction"
        android:icon="@drawable/ic_dollar"
        android:title="@string/title_transaction" />

    <item
        android:id="@+id/navigation_scan"
        android:icon="@drawable/ic_document_scanner"
        android:title="@string/title_scan" />

    <item
        android:id="@+id/navigation_chart"
        android:icon="@drawable/ic_pie_chart"
        android:title="@string/title_chart" />

    <item
        android:id="@+id/navigation_twibbon"
        android:icon="@drawable/ic_camera"
        android:title="@string/title_twibbon" />

    <item
        android:id="@+id/navigation_settings"
        android:icon="@drawable/ic_settings"
        android:title="@string/title_settings" />
</menu>