<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/navigation"
    app:startDestination="@+id/navigation_transaction">

    <fragment
        android:id="@+id/navigation_transaction"
        android:name="com.ath.bondoman.ui.transaction.TransactionFragment"
        android:label="@string/title_transaction"
        tools:layout="@layout/fragment_transaction">
        <action
            android:id="@+id/action_transactionFragment_to_transactionFormFragment"
            app:destination="@id/transactionFormFragment" />
    </fragment>

    <fragment
        android:id="@+id/transactionFormFragment"
        android:name="com.ath.bondoman.ui.transaction.TransactionFormFragment"
        android:label="@string/title_transaction_form"
        tools:layout="@layout/fragment_transaction_form" />

    <fragment
        android:id="@+id/navigation_scan"
        android:name="com.ath.bondoman.ui.scan.ScanFragment"
        android:label="@string/title_scan"
        tools:layout="@layout/fragment_scan" />

    <fragment
        android:id="@+id/navigation_chart"
        android:name="com.ath.bondoman.ui.chart.ChartFragment"
        android:label="@string/title_chart"
        tools:layout="@layout/fragment_chart" />

    <fragment
        android:id="@+id/navigation_settings"
        android:name="com.ath.bondoman.ui.settings.SettingsFragment"
        android:label="@string/title_settings"
        tools:layout="@layout/fragment_settings" />
</navigation>