<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="?attr/colorPrimaryVariant">



    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="32dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:cardElevation="0dp"
        android:backgroundTint="@color/white">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="621dp"
            android:orientation="vertical"
            android:padding="28dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/welcome_back_title"
                android:textColor="?attr/colorPrimaryVariant"
                android:textSize="@dimen/text_size_xl"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/login_subtitle_text"

                android:textSize="@dimen/text_size_sm">

            </TextView>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/email_label"
                android:textStyle="bold"
                android:textSize="@dimen/text_size_sm"/>

            <EditText
                android:id="@+id/email_edit_text"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:drawableStart="@drawable/ic_mail"
                android:drawablePadding="8dp"
                android:inputType="textEmailAddress"
                android:textSize="@dimen/text_size_xs"
                android:hint="@string/email_placeholder"/>

            <TextView
                android:id="@+id/email_error_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/email_error_text"
                android:textColor="?attr/colorError"
                android:textStyle="italic"
                android:textSize="@dimen/text_size_xs"
                android:visibility="gone" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/password_label"
                android:textStyle="bold"
                android:textSize="@dimen/text_size_sm"/>

            <EditText
                android:id="@+id/password_edit_text"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:drawableStart="@drawable/ic_lock"
                android:drawablePadding="8dp"
                android:inputType="textPassword"
                android:textSize="@dimen/text_size_xs"
                android:hint="@string/password_placeholder"/>

            <TextView
                android:id="@+id/password_error_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/password_error_text"
                android:textColor="?attr/colorError"
                android:textStyle="italic"
                android:textSize="@dimen/text_size_xs"
                android:visibility="gone" />

            <TextView
                android:id="@+id/login_error_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="?attr/colorError"
                android:textStyle="italic"
                android:textSize="@dimen/text_size_xs"
                android:visibility="gone" />

            <Button
                android:id="@+id/login_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/login_btn_text"
                android:textStyle="bold"
                android:background="@drawable/bg_primary_button"
                android:layout_marginTop="20dp"/>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>