<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/headerLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/transactionFormBackBtn"
            android:layout_width="38dp"
            android:layout_height="38dp"
            android:layout_alignParentStart="true"
            android:background="@android:color/transparent"
            android:contentDescription="@string/transaction_form_back_button"
            android:src="@drawable/ic_back_button" />

        <TextView
            android:id="@+id/transaction_form_header_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/title_transaction_form"
            android:textSize="28sp"
            android:textStyle="bold" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="28dp"
        app:layout_constraintTop_toBottomOf="@+id/headerLinearLayout"
        app:layout_constraintVertical_bias="1.0"
        tools:layout_editor_absoluteX="0dp">

        <!-- Date -->
        <TextView
            android:id="@+id/transaction_form_date_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:autofillHints="transactionDate"
            android:drawablePadding="8dp"
            android:gravity="end"
            android:textSize="@dimen/text_size_sm" />

        <!-- Title -->
        <TextView
            android:id="@+id/transaction_form_title_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:labelFor="@+id/transaction_form_title_field"
            android:text="@string/transaction_form_title_label"
            android:textSize="@dimen/text_size_sm"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/transaction_form_title_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:autofillHints="transactionTitle"
            android:drawablePadding="8dp"
            android:inputType="text"
            android:textSize="@dimen/text_size_sm" />

        <!-- Amount -->
        <TextView
            android:id="@+id/transaction_form_amount_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:labelFor="@+id/transaction_form_amount_field"
            android:text="@string/transaction_form_amount_label"
            android:textSize="@dimen/text_size_sm"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/transaction_form_amount_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:autofillHints="transactionAmount"
            android:drawablePadding="8dp"
            android:inputType="numberDecimal"
            android:textSize="@dimen/text_size_sm" />

        <!-- Category -->
        <TextView
            android:id="@+id/transaction_form_category_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:labelFor="@+id/transaction_form_category_field"
            android:text="@string/transaction_form_category_label"
            android:textSize="@dimen/text_size_sm"
            android:textStyle="bold" />

        <Spinner
            android:id="@+id/transaction_form_category_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp" />

        <!-- Location -->
        <TextView
            android:id="@+id/transaction_form_location_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:labelFor="@+id/location_field"
            android:text="@string/transaction_form_location_label"
            android:textSize="@dimen/text_size_sm"
            android:textStyle="bold" />

        <RelativeLayout
            android:id="@+id/locationLinearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp">

            <!-- Location Button -->
            <ImageButton
                android:id="@+id/transaction_form_location_button"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_alignParentEnd="true"
                android:contentDescription="@string/transaction_form_location_button"
                android:src="@drawable/ic_location" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <!-- Location Text Field -->
                <TextView
                    android:id="@+id/transaction_form_location_field"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:maxLines="3"
                    android:text="@string/transaction_form_default_location_text"
                    android:textSize="@dimen/text_size_sm" />

                <!-- Open in Gmaps -->
                <LinearLayout
                    android:id="@+id/transaction_form_open_in_gmaps_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="6dp"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <ImageButton
                        android:id="@+id/transaction_form_open_in_gmaps_button_image"
                        android:layout_width="16dp"
                        android:layout_height="16dp"
                        android:background="@android:color/transparent"
                        android:contentDescription="@string/transaction_form_open_in_gmaps_button"
                        android:src="@drawable/ic_open_in" />

                    <TextView
                        android:id="@+id/transaction_form_open_in_gmaps_button_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginStart="4dp"
                        android:text="@string/transaction_form_open_in_gmaps_text"
                        android:textColor="@color/blue_500"
                        android:textSize="@dimen/text_size_sm"
                        android:textStyle="italic" />

                </LinearLayout>


            </LinearLayout>


        </RelativeLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <!-- Delete Button -->
            <android.widget.Button
                android:id="@+id/delete_transaction_button"
                style="@style/Button.Error"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/delete_transaction_button" />

            <!-- Save Button -->
            <android.widget.Button
                android:id="@+id/save_transaction_button"
                style="@style/Button.Primary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="@string/save_transaction_button" />
        </LinearLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>