<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/headerLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_app_bar"
        android:padding="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/transactionFormBackBtn"
            android:layout_width="38dp"
            android:layout_height="38dp"
            android:layout_alignParentStart="true"
            android:background="@android:color/transparent"
            android:contentDescription="@string/transaction_form_back_button"
            android:src="@drawable/ic_back_button" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/title_transaction_form"
            android:textSize="28sp"
            android:textStyle="bold" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="631dp"
        android:orientation="vertical"
        android:padding="28dp"
        app:layout_constraintTop_toBottomOf="@+id/headerLinearLayout"
        tools:layout_editor_absoluteX="0dp">

        <!-- Date -->
        <TextView
            android:id="@+id/transaction_form_date_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawablePadding="8dp"
            android:layout_marginBottom="10dp"
            android:textSize="@dimen/text_size_sm"
            android:autofillHints="transactionDate"
            android:gravity="end" />

        <!-- Title -->
        <TextView
            android:id="@+id/transaction_form_title_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/transaction_form_title_label"
            android:textSize="@dimen/text_size_sm"
            android:textStyle="bold"
            android:labelFor="@+id/transaction_form_title_field" />

        <EditText
            android:id="@+id/transaction_form_title_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawablePadding="8dp"
            android:layout_marginBottom="10dp"
            android:inputType="text"
            android:textSize="@dimen/text_size_sm"
            android:autofillHints="transactionTitle" />

        <!-- Amount -->
        <TextView
            android:id="@+id/transaction_form_amount_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/transaction_form_amount_label"
            android:textSize="@dimen/text_size_sm"
            android:textStyle="bold"
            android:labelFor="@+id/transaction_form_amount_field" />

        <EditText
            android:id="@+id/transaction_form_amount_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawablePadding="8dp"
            android:layout_marginBottom="10dp"
            android:inputType="numberDecimal"
            android:textSize="@dimen/text_size_sm"
            android:autofillHints="transactionAmount" />

        <!-- Category -->
        <TextView
            android:id="@+id/transaction_form_category_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/transaction_form_category_label"
            android:textSize="@dimen/text_size_sm"
            android:textStyle="bold"
            android:labelFor="@+id/transaction_form_category_field" />

        <Spinner
            android:id="@+id/transaction_form_category_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
        />

        <!-- Location -->
        <TextView
            android:id="@+id/transaction_form_location_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/transaction_form_location_label"
            android:textSize="@dimen/text_size_sm"
            android:textStyle="bold"
            android:labelFor="@+id/location_field" />

        <RelativeLayout
            android:id="@+id/locationLinearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp">

            <!-- Location Button -->
            <ImageButton
                android:id="@+id/transaction_form_location_button"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_alignParentEnd="true"
                android:src="@drawable/ic_location"
                android:contentDescription="@string/transaction_form_location_button" />

            <!-- Location Text Field -->
            <TextView
                android:id="@+id/transaction_form_location_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toStartOf="@id/transaction_form_location_button"
                android:textSize="@dimen/text_size_sm"
                android:text="@string/transaction_form_default_location_text"
                android:maxLines="3"
                android:ellipsize="end" />
        </RelativeLayout>

        <!-- Save Button -->
        <Button
            android:id="@+id/save_transaction_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:background="@drawable/bg_primary_button"
            android:text="@string/save_transaction_button"
            android:textStyle="bold" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>